<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:orientation="vertical"
        tools:context=".EditDetailFragment">

        <!-- TODO: Update blank fragment layout -->

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="16dp"
            android:orientation="horizontal">
            <!--Account Username -->
            <TextView
                android:id="@+id/enterAccName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_accountName"
                android:textSize="20sp"/>

            <!--Insert Name -->
            <EditText
                android:id="@+id/insertAccName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Enter an email address"
                android:inputType="textEmailAddress"
                android:scrollbars="vertical"
                android:text="@string/hello_blank_fragment"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="16dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/enterUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:text="@string/enter_name"
                android:textSize="20sp"
                />

            <!--Account Description -->
            <EditText
                android:id="@+id/insertUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Enter a username for the email"
                android:inputType="text"
                android:scrollbars="vertical"
                android:text="@string/hello_blank_fragment"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_margin="16dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/enterAccPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:text="@string/enter_new_password"
                android:textSize="20sp"
                />

            <!--Account Description -->
            <EditText
                android:id="@+id/insertAccPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Enter a new password for the email"
                android:inputType="textPassword"
                android:scrollbars="vertical"
                android:text="@string/hello_blank_fragment"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/togglePasswordVisibilityBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:background="?android:attr/selectableItemBackground"
                android:src="@android:drawable/ic_secure" />
        </LinearLayout>
        
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:text="@string/save_changes" />
    </LinearLayout>
</ScrollView>


